--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,11 +1,11 @@
 .root {
   margin: 0 auto;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 17px;
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
-  color: #000;
-  background-color: #fff;
+  color: #fff;
+  background-color: #000;
   min-width: 320px;
-  max-width: 1500px;
+  max-width: 1280x;
 }
