--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,10 +1,19 @@
 .header__logo {
-    display: block;
-    background-image: url(../../../images/header__logo.svg);
-    background-repeat: no-repeat;
-    width: 142px;
-    height: 33px;
-    padding-bottom: 41px;
-    color: #fff;
+  display: block;
+  background-image: url(../../../images/header__logo.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 142px;
+  height: 33px;
+  margin-bottom: 41px;
+  color: #fff;
 }
 
+@media screen and (max-width: 725px) {
+  .header__logo {
+    background-size: 104px;
+    width: 104px;
+    height: 25px;
+    margin-bottom: 31px;
+  }
+}
