--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,10 +1,22 @@
 .profile__add-button {
     width: 150px;
     height: 50px;
-    border: 1px solid #fff;
-    background-image: url(../../../images/Vector.svg);
+    border: 2px solid #fff;
+    background-image: url(../../../images/add-button.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-color: #000;
     cursor: pointer;
+    transition: all 0.2s;
+}
+
+.profile__add-button:hover {
+  border: 2px solid rgba(255,255,255, 0.6);
+  background-image: url(../../../images/add-button_hover.svg);
+}
+
+@media screen and (max-width: 640px) {
+  .profile__add-button {
+    width: 282px;
+  }
 }
