--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,4 +10,21 @@
     background-position: center;
     background-color: #000;
     cursor: pointer;
+    transition: all 0.2s;
+}
+
+.profile__edit-button:hover {
+  border: 1px solid rgba(255,255,255, 0.6);
+  background-image: url(../../../images/pencil_hover.svg);
+}
+
+
+@media screen and (max-width: 725px) {
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    top: 10px;
+    left: 200px;
+    background-size: 8px;
+  }
 }
