--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,3 +1,16 @@
 .profile__info {
-    max-width: 500px;
+    margin-right: 260px;
+}
+
+@media screen and (max-width: 900px) {
+    .profile__info {
+        margin-left: 20px;
+        margin-right: 80px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .profile__info {
+        margin: 26px auto 30px;
+    }
 }
