--- a/blocks/profile/profile1.css
+++ b/blocks/profile/profile1.css
@@ -1,5 +1,12 @@
 .profile1 {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 640px) {
+  .profile1 {
+    display: flex;
+    flex-direction: column;
+  }
 }
