--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,5 +1,8 @@
 .root {
+  position: relative;
+  box-sizing: border-box;
   margin: 0 auto;
+  padding: 0 19px;
   font-size: 14px;
   line-height: 17px;
   font-family: 'Inter', Arial, sans-serif;
