--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -2,6 +2,8 @@
   padding: 14px 125px 18px;
   border: none;
   border-radius: 2px;
+  font-size: 18px;
+  line-height: 22px;
   color: #fff;
   background-color: #000;
   cursor: pointer;
@@ -10,4 +12,15 @@
 
 .popup__submit:hover {
   background-color: rgba(0, 0, 0, 0.8);
+}
+
+@media screen and (max-width: 640px) {
+  .popup__submit {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 75px;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 14px 82px;
+  }
 }
