--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -16,3 +16,13 @@
 .popup__close-icon:hover {
   background-image: url(../../../images/close-icon_hover.svg);
 }
+
+@media screen and (max-width: 640px) {
+    .popup__close-icon {
+        right: 0;
+        top: -30px;
+      width: 20px;
+      height: 20px;
+      background-size: 20px;
+    }
+  }
