--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -13,3 +13,11 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
 }
+
+@media screen and (max-width: 640px) {
+  .popup__container {
+      width: 282px;
+      padding: 22px 25px;
+  }
+}
+
