--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,7 @@
 .popup {
-  display: none;
-  align-items: center;
+  display: flex;
+  align-items: flex-start;
+  padding-top: 400px;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -10,4 +11,10 @@
   bottom: 0;
   margin: auto;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 640px) {
+  .popup {
+    padding-top: 280px;
+  }
 }
