--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  margin: 0 auto;
+  margin: auto;
   padding: 36px;
   width: 430px;
   font-weight: 400;
