--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,20 +1,12 @@
 .popup {
-  display: flex;
+  display: none;
   align-items: flex-start;
-  padding-top: 400px;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
-  left: 0;
+  left:0;
   right: 0;
   top: 0;
   bottom: 0;
-  margin: auto;
   background-color: rgba(0, 0, 0, 0.5);
-}
-
-@media screen and (max-width: 640px) {
-  .popup {
-    padding-top: 280px;
-  }
 }
