--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,10 +1,10 @@
 .profile__name {
-  position: relative;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
   margin: 0;
   padding-bottom: 10px;
+  padding-right: 18px;
 }
 
 @media screen and (max-width: 725px) {
@@ -12,5 +12,6 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
+    padding-right: 10px;
   }
 }
