--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -11,9 +11,6 @@
 }
 
 .element__like:hover {
-  background-image: url(../../../images/like_hover.svg);
+  opacity: 0.8;
 }
 
-.element__like:active {
-  background-image: url(../../../images/like_active.svg);
-}
