--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/element__like_active.css);
 @import url(../blocks/element/__name/element__name.css);
 
 @import url(../blocks/footer/footer.css);
