--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,5 +1,6 @@
 .element__image {
     object-fit: cover;
+    display: block;
     width: 100%;
     max-height: 100%;
     border-top-left-radius: 10px;
