--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,5 +1,8 @@
 .element {
-  max-width: 100%;
+  width: 100%;
+  max-height: 100%;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
+  cursor: pointer;
 }
