--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -10,11 +10,11 @@
   background-position: center;
   background-color: transparent;
   cursor: pointer;
-  transition: all 0.2s;
+  transition: opacity 0.2s;
 }
 
 .popup__close-icon:hover {
-  background-image: url(../../../images/close-icon_hover.svg);
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 640px) {
