--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,8 +2,8 @@
     width: 100%;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 0;
-    padding-bottom: 8px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     margin-bottom: 26px;
     font-weight: 400;
     font-size: 14px;
