--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,12 +1,15 @@
 .popup {
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
   align-items: flex-start;
   position: fixed;
   width: 100%;
   height: 100%;
-  left:0;
+  left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  transition: all 0.2s linear;
 }
