--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,12 +8,11 @@
   background-color: transparent;
   border-radius: 2px;
   cursor: pointer;
-  transition: all 0.2s;
+  transition: opacity 0.2s;
 }
 
 .profile__add-button:hover {
-  border: 2px solid rgba(255, 255, 255, 0.6);
-  background-image: url(../../../images/add-button_hover.svg);
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 640px) {
