--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,12 +7,11 @@
   background-position: center;
   background-color: transparent;
   cursor: pointer;
-  transition: all 0.2s;
+  transition: opacity 0.2s;
 }
 
 .profile__edit-button:hover {
-  border: 1px solid rgba(255, 255, 255, 0.6);
-  background-image: url(../../../images/pencil_hover.svg);
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 725px) {
