--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__trash-icon/element__trash-icon.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/element/__name/element__name.css);
@@ -35,4 +36,8 @@
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__close-icon/popup__close-icon.css);
+@import url(../blocks/popup/_image/popup_image.css);
+@import url(../blocks/popup/_image/__container/popup_image__container.css);
+@import url(../blocks/popup/_image/__pic/popup_image__pic.css);
+@import url(../blocks/popup/_image/__title/popup_image__title.css);
 
