--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,6 +7,7 @@
   margin: auto;
   padding: 36px;
   width: 430px;
+  min-height: 330px;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
@@ -18,6 +19,7 @@
 @media screen and (max-width: 640px) {
   .popup__container {
       width: 282px;
+      min-height: 322px;
       padding: 22px 25px;
   }
 }
