--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,11 +1,15 @@
 .popup__input {
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-bottom: 26px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-  }
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 10px 0 6px;
+  margin-bottom: 15px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.popup__input:focus {
+  outline:none;
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
+}
