--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,5 +11,5 @@
   top: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  transition: all 0.2s linear;
+  transition: opacity 0.2s, visibility 0.2s;
 }
