--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,6 @@
 .profile__edit-button {
-  width: 24px;
-  height: 24px;
+  min-width: 24px;
+  min-height: 24px;
   border: 1px solid #fff;
   background-image: url(../../../images/pencil.svg);
   background-repeat: no-repeat;
