--- a/pages/index.css
+++ b/pages/index.css
@@ -34,10 +34,14 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
+@import url(../blocks/popup/__submit/_disabled/popup__submit_disabled.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__close-icon/popup__close-icon.css);
 @import url(../blocks/popup/_image/popup_image.css);
 @import url(../blocks/popup/_image/__container/popup_image__container.css);
 @import url(../blocks/popup/_image/__pic/popup_image__pic.css);
 @import url(../blocks/popup/_image/__title/popup_image__title.css);
+@import url(../blocks/popup/error/popup__error.css);
+@import url(../blocks/popup/error/_visible/popup__error_visible.css);
+@import url(../blocks/popup/__input/_type/_error/popup__input_type_error.css);
 
