--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,8 +2,7 @@
   width: 100%;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 10px 0 6px;
-  margin-bottom: 15px;
+  padding: 2px 0px 6px;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
