--- a/blocks/popup/error/popup__error.css
+++ b/blocks/popup/error/popup__error.css
@@ -1,11 +1,13 @@
 .popup__error {
-  display: none;
+  display: block;
   box-sizing: border-box;
-  height: 25px;
-  margin: 4px 0 6px;
-  max-width: 360px;
+  opacity: 0;
+  height: 30px;
+  margin: 0;
+  padding-top: 2px;
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
   color: #ff0000;
+  transition:  0.3s;
 }
