--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -4,3 +4,9 @@
   border-radius: 50%;
   object-fit: cover;
 }
+
+@media screen and (max-width: 640px) {
+  .profile__avatar  {
+    margin-bottom: 26px;
+  }
+}
