--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,6 +9,7 @@
 @import url(../blocks/header/__logo-img/header__logo-img.css);
 
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__wrap/profile__wrap.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name-wrap/profile__name-wrap.css);
