--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -8,6 +8,10 @@
   line-height: 17px;
 }
 
+.popup__input:last-of-type {
+  margin-bottom: 20px;
+}
+
 .popup__input:focus {
   outline:none;
   border-bottom: 1px solid rgba(0, 0, 0, 1);
