--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -3,10 +3,14 @@
   height: 120px;
   border-radius: 50%;
   object-fit: cover;
+  cursor: pointer;
+  transition: opacity .2s;
+  position: relative;
 }
 
-@media screen and (max-width: 640px) {
-  .profile__avatar  {
-    margin-bottom: 26px;
-  }
+.profile__avatar:hover {
+  opacity: .2;
+  z-index: 2;
 }
+
+
