--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 @media screen and (max-width: 640px) {
@@ -9,3 +10,4 @@
     flex-direction: column;
   }
 }
+
