--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 .header__logo{color:#fff;display:block;height:33px;margin-bottom:41px;width:142px}@media screen and (max-width:725px){.header__logo{height:25px;margin-bottom:31px;width:104px}}
 .header__logo-img{max-width:100%}
 .profile{align-items:center;display:flex;justify-content:space-between;position:relative}@media screen and (max-width:640px){.profile{flex-direction:column}}
-.profile__avatar{border-radius:50%;cursor:pointer;height:120px;-o-object-fit:cover;object-fit:cover;position:relative;transition:opacity .2s;width:120px}.profile__avatar:hover{opacity:.2;z-index:2}
+.profile__avatar{border-radius:50%;cursor:pointer;height:120px;-o-object-fit:cover;object-fit:cover;position:relative;text-align:center;transition:opacity .2s;width:120px}.profile__avatar:hover{opacity:.2;z-index:2}
 .profile__avatar-hover{background-color:transparent;background-image:url(9b21b46755c2280f2f94.svg);background-position:50%;border-radius:50%;height:26px;left:50px;opacity:0;position:absolute;top:50px;visibility:hidden;width:26px;z-index:0}.profile__avatar:hover+.profile__avatar-hover{display:block;opacity:1;transition:opacity .2s;visibility:visible}
 .profile__info{margin-left:20px;margin-right:230px;max-width:360px}@media screen and (max-width:900px){.profile__info{margin-right:20px}}@media screen and (max-width:640px){.profile__info{margin:26px auto 30px;max-width:280px}}
 .profile__name-wrap{align-items:baseline;display:flex;flex-wrap:nowrap}
@@ -30,7 +30,8 @@
 .popup{align-items:flex-start;background-color:rgba(0,0,0,.5);bottom:0;display:flex;height:100%;left:0;opacity:0;position:fixed;right:0;top:0;transition:opacity .2s,visibility .2s;visibility:hidden;width:100%}
 .popup_opened{opacity:1;transition:visibility .2s,opacity .2s;visibility:visible}
 .popup__title{color:#000;font-size:24px;font-weight:900;line-height:29px;margin:0;padding-bottom:36px}@media screen and (max-width:640px){.popup__title{font-size:18px;line-height:22px;padding-bottom:75px}}
-.popup__container{align-items:center;background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;display:flex;flex-direction:column;font-size:18px;font-weight:400;line-height:22px;margin:auto;padding:36px;position:relative;width:430px}@media screen and (max-width:640px){.popup__container{min-height:322px;padding:22px 25px;width:282px}}
+.popup__title-withSubmit{padding-bottom:38px}
+.popup__container{align-items:center;background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;display:flex;flex-direction:column;font-size:18px;font-weight:400;line-height:22px;margin:auto;padding:36px;position:relative;width:430px}@media screen and (max-width:640px){.popup__container{padding:22px 25px;width:282px}}
 .popup__form{width:360px}@media screen and (max-width:640px){.popup__form{width:232px}}
 .popup__form-field{margin:30px 0}
 .popup__submit{background-color:#000;border:none;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;line-height:22px;padding:16px 130px;transition:background-color .2s;width:100%}.popup__submit:hover{background-color:rgba(0,0,0,.8)}@media screen and (max-width:640px){.popup__submit{font-size:14px;line-height:17px;padding:14px 82px}}
